--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -3,10 +3,15 @@
 }
 
 .gallery {
-    max-height: 500px;
+    max-height: 800px;
     overflow-y: auto;
 }
 
 .galleryItem {
     overflow: auto;
+    padding: 5px;
+}
+
+.stepName {
+    font-size: x-small;
 }
