add drawer for detail view

--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -17,6 +17,7 @@
 }
 
 .galleryImage {
+    background-color: #FFFFFF;
     border: 3px solid rgb(204, 204, 204);
     border-radius: 100%;
     height: 75px;
