--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -10,6 +10,15 @@
     overflow-y: auto;
 }
 
+.catalogStep {
+    overflow: auto;
+    padding: 5px;
+    text-align: center;
+    background: white;
+    margin: 5px;
+    border-radius: 15px;
+}
+
 .galleryItem {
     overflow: auto;
     padding: 5px;
