--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -7,9 +7,11 @@
 .stepImage {
     height: 75px;
     width: 75px;
-    padding: 15px;
     align-items: center;
+    border-right: 1px solid #DDDDDD;
     justify-content: center;
+    padding: 15px;
+    position: relative;
 }
 
 .stepLabel {
