--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -1,5 +1,5 @@
 .step-creator-button {
-    background: white;
+    background-color: #FFFFFF;
     border-radius: 1.2em;
     position: fixed;
     right: 4em;
