--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -15,13 +15,22 @@
     width: 80px;
 }
 
+.stepNode__Add {
+    height: 6px;
+    position: absolute;
+    right: -10px;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 6px;
+}
+
 .stepNode__Icon {
     position: relative;
     top: 55%;
     transform: translateY(-50%);
 }
 
-.stepNode img, .stepNode svg {
+.stepNode__Icon img, .stepNode__Icon svg {
     height: 40px;
     left: 0;
     pointer-events: none;
