--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -18,10 +18,14 @@
 .stepNode__Add {
     height: 6px;
     position: absolute;
-    right: -10px;
-    top: 50%;
+    right: -8px;
+    top: 40%;
     transform: translateY(-50%);
     width: 6px;
+}
+
+.stepNode__Add button {
+    padding: 0;
 }
 
 .stepNode__Icon {
