add default dsl options, remove padding
remove dashboard css, move to visualization css

move tool menu down

alignment

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -2,6 +2,25 @@
     background-color: var(--pf-global--BackgroundColor--200);
 }
 
+.step-creator-button {
+    background-color: #FFFFFF;
+    border-radius: 1.2em;
+    position: fixed;
+    right: 4em;
+    text-align: center;
+    top: 12em;
+    z-index: 200;
+}
+
+.step-creator-button button {
+    position: relative;
+}
+
+.visualization {
+    position: relative;
+}
+
+
 .stepNode {
     align-items: center;
     background: white;
