fix(syntax): remove extra semi colon

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -23,7 +23,7 @@
 
 .stepNode {
     align-items: center;
-    background: var(--pf-global--BackgroundColor--100);;
+    background: var(--pf-global--BackgroundColor--100);
     display: block;
     font-family: Ubuntu, serif;
     font-size: small;
