--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,6 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
 
+.pf-u-screen-reader {
+  display: none;
+}
