--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -31,6 +31,11 @@
 }
 
 /* Mini Catalog Step (from list) */
+
+.miniCatalog__stepItem {
+    padding: 0;
+}
+
 button.miniCatalog__stepItem.pf-c-button.pf-m-tertiary {
     --pf-c-button--after--BorderColor: transparent;
     width: 100%;
