--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -34,6 +34,12 @@
 
 /* MINI CATALOG */
 
+.miniCatalog__gallery {
+    max-height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
+
 /* Mini Catalog Search */
 .miniCatalog__search.pf-c-toolbar__item {
     width: 100%;
