--- a/src/components/Catalog.css
+++ b/src/components/Catalog.css
@@ -1,3 +1,8 @@
+.catalog {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 
 .catalog__help {
     /*color: var(--pf-c-form__group-label-help--Color);*/
