Fix reactflow css

--- a/src/kogito-integration/KaotoEditor.css
+++ b/src/kogito-integration/KaotoEditor.css
@@ -1,4 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+@import '~@patternfly/react-core/dist/styles/base.css';
+@import '~@patternfly/patternfly/patternfly.css';
+@import '~@patternfly/patternfly/patternfly-theme-dark.css';
+@import '~@patternfly/patternfly/utilities/Accessibility/accessibility.css';
+@import '~@patternfly/patternfly/utilities/Display/display.css';
+@import '~@patternfly/patternfly/utilities/Flex/flex.css';
+@import '~@patternfly/patternfly/utilities/Sizing/sizing.css';
+@import '~@patternfly/patternfly/utilities/Spacing/spacing.css';
+@import '~reactflow/dist/style.css';
 
 html,
 body,
