feat(viz): move controls to the right, add custom icons for auto-layout
rm unused icons

fix: update unit tests to account for layouting

chore: rm unnecessary dependencies

chore: fix buildNodeDefaultParams tests to reflect updated step params

revert changes to kaoto toolbar

deepscan fix

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -98,3 +98,8 @@
 .react-flow__minimap.visualization__minimap {
     right: 50px;
 }
+
+.visualization__controls {
+    left: unset !important;
+    right: 0;
+}
