--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -75,6 +75,19 @@
     width: 250%;
 }
 
+.stepNode__Label-vertical {
+    bottom: -30px;
+    left: -75%;
+    position: relative;
+    width: 250%;
+}
+
+.stepNode__Label-vertical span {
+    background: var(--pf-global--BackgroundColor--150);
+    border-radius: 15%;
+    padding: 0.4em;
+}
+
 .stepNode__Slot {
     border: 2px solid var(--pf-global--BorderColor--100);
     border-radius: 50%;
