feat(viz): add ability to prepend step to branch steps
chore: add test for validationService prependable steps

chore: add test for prependStep

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -81,6 +81,12 @@
     padding: 0.4em;
 }
 
+.stepNode__Prepend {
+    position: absolute;
+    left: -24px;
+    top: 38%;
+}
+
 .stepNode__Slot {
     border: 2px solid var(--pf-global--BorderColor--100);
     border-radius: 50%;
