--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,12 @@ code {
 .pf-u-screen-reader {
   display: none;
 }
+
+/*
+  clears the extra 'X' for Google Chrome, Microsoft Edge (Chromium)
+  from the Step Catalogs's Search box
+*/
+#stepSearch input[type="search"]::-webkit-search-decoration,
+#stepSearch input[type="search"]::-webkit-search-cancel-button,
+#stepSearch input[type="search"]::-webkit-search-results-button,
+#stepSearch input[type="search"]::-webkit-search-results-decoration { display: none; }
