feat(branching): add ability to delete branches
feat(branching): show custom delete edge for steps with branches

feat(branching): add dialog for confirming branch delete

chore: consolidate css, make hover color for delete buttons the same

fix(branching): improve conditional assertions, add test for edge case

fix: only show append step when there is at least one branch

fix: deepscan fix

--- a/src/components/CustomEdge.css
+++ b/src/components/CustomEdge.css
@@ -1,16 +1,4 @@
-.plusButton {
-    width: 20px;
-    height: 20px;
-    background: var(--pf-global--Color--light-200);
-    color: rgb(0, 0, 0);
-    border: 1px solid #fff;
-    cursor: pointer;
-    border-radius: 50%;
-    font-size: 12px;
-    line-height: 1;
-    padding: 1px;
-}
-.trashButton{
+.deleteButton, .plusButton, .trashButton {
     width: 20px;
     height: 20px;
     background: var(--pf-global--Color--light-200);
@@ -27,7 +15,7 @@
     visibility: hidden;
 }
 
-.trashButton:hover {
+.deleteButton:hover, .trashButton:hover {
     background: #B2A3FF;
     box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.08);
 }
@@ -36,17 +24,8 @@
     background:#F4C145;
     box-shadow: 0 0 6px 2px rgba(0, 0, 0, 0.08);
 }
-.trashButton-foreignObject span {
-    background: transparent;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 40px;
-}
 
-.plusButton-foreignObject span {
+.deleteButton-foreignObject span, .trashButton-foreignObject span, .plusButton-foreignObject span {
     background: transparent;
     width: 40px;
     height: 40px;
