--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -106,6 +106,30 @@
     border-radius: 50%;
 }
 
+/* SHOWN FOR EMPTY STATE PLACEHOLDERS */
+.nodeHintArrow {
+    margin-right: 6px;
+    font-size: 16px;
+    font-weight: 900;
+    position: relative;
+    top: 6px;
+}
+
+.nodeHintWrapper {
+    position: absolute;
+    top: -34px;
+    left: 50px;
+    font-size: 11px;
+    font-weight: 400;
+    text-align: left;
+    line-height: 1.1;
+    color: #999;
+    width: 120px;
+    display: flex;
+    align-items: flex-end;
+    pointer-events: none;
+}
+
 .react-flow__minimap.visualization__minimap {
     right: 50px;
 }
