fix(vscode): Adding a step in Kaoto VSCode takes several seconds
Currently, adding a new step from the `VSCode` extension takes more than 12 seconds.

This is because, in `VSCode`, the `MiniCatalog` component gets rerendered many times
blocking the UI thread.

Part of the solution is to avoid recreating functions inside of components that
later on are passed to child components. A more robust solution would include
removing many other points that trigger extra renders.

Changes
* Move the `onNodeClick` function inside of a `useCallback()` hook
* Given that stepsService it's a dependency of `onNodeClick`, it needed to be moved inside a `useMemo()` hook.
* Remove `setReactFlowInstance` since seems not used
* Remove `reactFlowWrapper` since is not linked with anything
* Move inline styles to a dedicated CSS class

Fixes https://github.com/KaotoIO/vscode-kaoto/issues/132

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -17,6 +17,11 @@
     right: -20px !important;
 }
 
+.reactflow-wrapper {
+    width: 100vw;
+    height: calc(100vh - 77px);
+}
+
 .stepNode {
     align-items: center;
     background: var(--pf-global--BackgroundColor--100);
@@ -51,7 +56,7 @@
     left: 0;
     top: 0;
  }
-  
+
  .stepNode__Icon {
     position: relative;
     top: 55%;
