chore: Add AppendStepButton disable state
At the moment, when the AppendStepButton component is disabled, the
only difference to the user is that the button does not react to
click events and also displays a Tooltip explaining the situation.

This commit adds a Disabled concept around the AppendStepButton
component by disabling the hovering, slightly dimming the background
color and lastly, changing the cursor to a Block icon to clearly
signal that it is disabled

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -64,6 +64,15 @@
     top: auto;
 }
 
+button[data-disable-branchestab="true"][data-disable-stepstab="true"] {
+    cursor: not-allowed;
+    color:rgb(210, 210, 210)
+}
+
+button[data-disable-branchestab="true"][data-disable-stepstab="true"]:hover {
+    background: var(--pf-global--Color--light-200)
+}
+
 .stepNode__Delete {
     position: absolute;
     left: 0;
