feat(viz): Export current flow to PNG
This commit adds the functionality to export the current canvas
to a PNG file named after the integration name.

implements: https://github.com/KaotoIO/kaoto-ui/issues/1708

--- a/src/components/Visualization.css
+++ b/src/components/Visualization.css
@@ -1,5 +1,8 @@
-.pf-c-drawer__content.panelCustom {
+.pf-c-drawer__content.panelCustom, .react-flow.panelCustom {
     background-color: var(--pf-global--BackgroundColor--200);
+}
+
+.pf-c-drawer__content.panelCustom {
     overflow: hidden;
 }
 
