--- a/src/layout/Dashboard.css
+++ b/src/layout/Dashboard.css
@@ -1,43 +1,48 @@
 .pf-c-toolbar.viz-toolbar {
-    padding: 6px 1rem;
+  padding: 6px 1rem;
 }
 
 #kaoto-left-drawer {
-    height: calc(100vh - 77px);
+  height: calc(100vh - 77px);
 }
 
 .status-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    user-select: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  user-select: none;
 }
 
 @keyframes blink {
-    0% { opacity: 0; }
-    50% { opacity: 1; }
-    100% { opacity: 0; }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
 .dot {
-    display: block;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    box-shadow: 0 0 0 3px rgba(91, 150, 213, 0.2);
-    background-color: #5b96d5;
-    margin-right: 6px;
-    animation: blink 2s infinite;
+  display: block;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  box-shadow: 0 0 0 3px rgba(91, 150, 213, 0.2);
+  background-color: #5b96d5;
+  margin-right: 6px;
+  animation: blink 2s infinite;
 }
 .text {
-    color: #8dbfff;
-    font-size: 12px;
-    font-weight: 600;
+  color: #8dbfff;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 /* Override for PF dropdown menu,
    otherwise, Drawer will cover it */
 .pf-c-dropdown__menu {
-    z-index: 999 !important;
+  z-index: 999 !important;
 }
-
